set(TEST_EXECUTABLE_NAME tests_pwn_${PROJECT_NAME})
list(APPEND SOURCE_FILES

    ${TEST_DIR}/main.cpp
)

add_executable(${TEST_EXECUTABLE_NAME} ${SOURCE_FILES})
add_executable(PWN::Tests::${PROJECT_NAME} ALIAS ${TEST_EXECUTABLE_NAME})
add_dependencies(${TEST_EXECUTABLE_NAME} PWN::Deps::Catch2 PWN::${PROJECT_NAME})
target_link_libraries(${TEST_EXECUTABLE_NAME} PUBLIC PWN::Deps::Catch2 PWN::${PROJECT_NAME})
target_link_options(${TEST_EXECUTABLE_NAME} PUBLIC /SUBSYSTEM:Console)
add_test(NAME ${TEST_EXECUTABLE_NAME} COMMAND $<TARGET_FILE:${TEST_EXECUTABLE_NAME}>)
set_tests_properties(${TEST_EXECUTABLE_NAME} PROPERTIES LABELS Remote LABELS Windows LABELS RPC)
install(FILES $<TARGET_FILE:${TEST_EXECUTABLE_NAME}> DESTINATION Tests)
